--- a/index.html
+++ b/index.html
@@ -164,13 +164,25 @@
                 </div>
             </div>
         </section>
-
-        
+        <div class="divider-1"></div>
     </main>
 
-    <footer>
+    <footer class="section">
+        <div class="container grid">
 
+            <div class="brand">
+                <a href="#home" class="logo logo-alt">beauty<span>salon</span>.</a>
+                <p>©2021 Beautysalon</p>
+                <p>Todos os direitos reservados</p>
+            </div>
+            <div class="social">
+                <a href="#" target=_blank><i class="icon-instagram"></i></a>
+                <a href="#" target=_blank><i class="icon-facebook"></i></a>
+                <a href="#" target=_blank><i class="icon-youtube"></i></a>
+            </div>
+        </div>
     </footer>
+    <a href="#home" id="back-to-top"><i class="icon-arrow-up"></i></a>
     <!-- SWIPER-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
