Versão mobile finalizada

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
 </head>
 <body>
+    <div id="topo">teste</div>
     <header id="header">
         <nav class="container ">
             <a href="#home" class="logo">beauty<span>salon</span>.</a>
@@ -182,7 +183,7 @@
             </div>
         </div>
     </footer>
-    <a href="#home" id="back-to-top"><i class="icon-arrow-up"></i></a>
+    <a href="#topo" id="back-to-top"><i class="icon-arrow-up"></i></a>
     <!-- SWIPER-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
