--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="container grid">
                 <header>
                     <h2 class="title">Serviços</h2>
-                    <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+                    <p class="subtitle">Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
                 </header>
                 <div class="cards grid">
                     <div class="card">
@@ -169,21 +169,21 @@
     </main>
 
     <footer class="section">
-        <div class="container grid">
+        <div class="container">
 
             <div class="brand">
                 <a href="#home" class="logo logo-alt">beauty<span>salon</span>.</a>
-                <p>©2021 Beautysalon</p>
-                <p>Todos os direitos reservados</p>
+                <p>©2021 Beautysalon.</p>
+                <p>Todos os direitos reservados.</p>
             </div>
-            <div class="social">
+            <div class="social grid">
                 <a href="#" target=_blank><i class="icon-instagram"></i></a>
                 <a href="#" target=_blank><i class="icon-facebook"></i></a>
                 <a href="#" target=_blank><i class="icon-youtube"></i></a>
             </div>
         </div>
     </footer>
-    <a href="#topo" id="back-to-top"><i class="icon-arrow-up"></i></a>
+    <a href="#topo"><i class="icon-arrow-up back-to-top"></i></a>
     <!-- SWIPER-->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
